[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nicesrt"
authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
	# nicegui
    # fastapi
	# uvicorn
    "nicegui>=1.3.5",
    # pysrt
    "pysrt"
]

requires-python = ">=3.8"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version", "description"]
[tool.hatch.version]
path = "nicesrt/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/nicesrt"
Documentation = "https://wiki.bitplan.com/index.php/nicesrt"
Source = "https://github.com/WolfgangFahl/nicesrt"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["nicesrt","nicesrt_examples"]

[tool.hatch.build.targets.wheel.sources]
"nicesrt" = "nicesrt"
"nicesrt_examples" = "nicesrt_examples"

[project.scripts]
nicesrt = "nicesrt.nicesrt_cmd:main"
