[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nicetrack"
description = "nicegui based 3D Track handling"
keywords = ["nicegui", "telemetry", "3D track", "drone", "video", "gpx", "srt"]

authors = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"}
]
maintainers = [
  {name = "Wolfgang Fahl", email = "wf@bitplan.com"},
]
readme = "README.md"
license= "Apache-2.0"
dependencies = [
    # nicegui https://nicegui.io/
    # fastapi
    # uvicorn
    "nicegui>=1.3.9",
    # https://github.com/WolfgangFahl/nicegui_widgets/
    "ngwidgets>=0.6.3",
    # https://github.com/tkrajina/gpxpy
    "gpxpy",
    # pysrt
    "pysrt",
    # numpy
    "numpy",
    # nominatim in https://pypi.org/project/OSMPythonTools/
    "OSMPythonTools",
    # https://pypi.org/project/python-vlc/
    "python-vlc",
    # https://pypi.org/project/PyQt5/
    "PyQt5",
    # https://pypi.org/project/opencv-python/
    "opencv-python",
    # https://github.com/PyAV-Org/PyAV
    "av"

]

requires-python = ">=3.9"
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License"
    ]
dynamic = ["version"]
[tool.hatch.version]
path = "nicetrack/__init__.py"

[project.urls]
Home = "https://github.com/WolfgangFahl/nicetrack"
Documentation = "https://wiki.bitplan.com/index.php/nicetrack"
Source = "https://github.com/WolfgangFahl/nicetrack"

[project.optional-dependencies]
test = [
  "green",
]

[tool.hatch.build.targets.wheel]
only-include = ["nicetrack","nicetrack_examples"]

[tool.hatch.build.targets.wheel.sources]
"nicetrack" = "nicetrack"
"nicetrack_examples" = "nicetrack_examples"

[project.scripts]
nicetrack = "nicetrack.nicetrack_cmd:main"
